turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:5: error: STOP is already defined as value STOP
val STOP=0
    ^Turmite:6: error: not found: value DE
val PAS DE VIRAGE=1
        ^Turmite:8: error: not found: value -
val DEMI-TOUR=4
        ^